--- a/index.html
+++ b/index.html
@@ -4,80 +4,140 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--CSS-->
+    <!-- CSS Styles -->
     <link rel="stylesheet" href="estilos/estilos.css">
     <link rel="stylesheet" href="estilos/main.css">
     <link rel="stylesheet" href="estilos/vendor.css">
+    <link rel="stylesheet" href="estilos/font-awesome/css/fontawesome-all.css">
 
-    <!--JAVASCRIPT
-    =============================-->
+    <!-- JavaScript -->
     <script src="js/modernizr.js"></script>
-    <script src="js/pace.min.js"> </script>
+    <script src="js/pace.min.js"></script>
 
-    <!--Favicon - icono de la pestaña
-    =============================-->
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image-png" sizes="16x16" href="favicon-16x16.png">
-    <title>portafolio</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 
+    <title>Portfolio</title>
 </head>
 
 <body id="top">
-    <!--vista de carga o loading-->
-    <div id="loader">
-        <div id="preloader"></div>
+    <!-- Preloader -->
+    <div id="preloader">
+        <div id="loader"></div>
     </div>
 
-    <!-- Empezamos con el header
- =================================-->
+    <!-- Header -->
     <header class="s-header">
-        <div class="header-logo">
-            <a href="index.html" class="site log">
-                <img src="imagenes/logo.svg" alt="homepage">
-            </a>
+        <div class="header-log">
+            <a href="index.html" class="site-log"></a>
+            <img src="img/logo.svg" alt="Homepage">
         </div>
-        <!--barra de navegacioon
-    ================================-->
+
+        <!-- Navigation Bar -->
         <nav class="header-nav-wrap">
             <ul class="header-main-nav">
-                <li class="current"><a href="#intro" class="smoothscroll" title="intro">introduccion</a></li>
-                <li><a href="#about" class="smoothscroll"> about</a></li>
-                <li><a href="#service" title="services" class="smoothscroll">services</a></li>
-                <li><a href="#works" title="works" class="smoothscroll">Works</a></li>
-                <li><a href="#contact" title="contact us"> Contact</a></li>
+                <li class="current"><a href="#intro" class="smoothscroll" title="intro">Introduction</a></li>
+                <li><a href="#about" title="about" class="smoothscroll">About</a></li>
+                <li><a href="#services" title="services" class="smoothscroll">Services</a></li>
+                <li><a href="#works" title="Works" class="smoothscroll">Works</a></li>
+                <li><a href="#contact" title="contact us" class="smoothscroll">Contact Us</a></li>
             </ul>
 
-            <!--Creamos una lista desordenada para las redes sociales
-        =========================================================-->
+            <!-- Social Media Links -->
             <ul class="header-social">
-                <li><a href="#0"><i class="fav fa-facebook" aria-hidden="true"></i></a></li>
-                <li> <a href="#1"><i class="fav fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="#2"><i class="fav fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a href="#3"><i class="fav fa-youtube" aria-hidden="true"></i></a></li>
+                <li><a href="#0"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="#1"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="#2"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a href="#3"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
             </ul>
         </nav>
-        <a href="" class="header-menu-toggle"><span>Menu</span></a>
-    </header><!--Fin del header-->
+        <a href="#" class="header-menu-toggle"><span>Menu</span></a>
+    </header> <!-- End of Header -->
 
-    <!--Introduccion
- ===================================================-->
-    <section id="intro" class="s-intro targer-section">
+    <!-- Introduction -->
+    <section id="intro" class="s-intro target-section">
         <div class="row intro-content">
             <div class="column large-9 mob-full intro-text">
-                <h3> hola mi nombre es </h3>
+                <h3>Hello, My Name is Erick Cadena</h3>
                 <h1>
-                    Desarrollador web <br>
-                    Trsbsjador y estudiante <br>
+                    Web Developer <br>
+                    Mobile Developer <br>
+                    AI Expert <br>
                 </h1>
             </div>
             <div class="intro-scroll">
-                <a href="#about" class="intro-scroll-link smoothscroll">
-                    Precione para mas
-                </a>
-
+                <a href="#about" class="intro-scroll-link smoothscroll">Click for more</a>
             </div>
-        </div>
+            <div class="intro-grid"></div>
+            <div class="intro-pic"></div>
+        </div><!-- end row -->
+    </section><!-- end intro -->
+
+    <!-- About Section -->
+    <section id="about" class="s-about target-section">
+        <div class="about-me"> <!-- Start about me -->
+            <div class="row heading-block"> <!-- Header -->
+                <div class="column large-full"> <!-- Body -->
+                    <h2 class="section-heading">About Me</h2>
+                </div>
+            </div>
+            <div class="row about-me__content"> <!-- Content -->
+                <div class="column large-full about-me__text"> <!-- Text -->
+                    <p class="lead">
+                        I am a developer in training with a focus on modern technologies and a solid foundation in
+                        programming. Currently, I am pursuing studies that complement my skills, and I have obtained
+                        certificates in Python, Java, CSS, and HTML. In addition to my training in development, I have
+                        several years of experience in the floral sector, where I have held roles in administration,
+                        purchasing, logistics, and sales. During this time, I have developed skills in customer service,
+                        inventory management, and sales, which have allowed me to understand the importance of effective
+                        communication and teamwork. I am committed to continuous learning and improving my technical
+                        skills. I am passionate about programming and enjoy solving complex problems through code. My
+                        goal is to contribute to innovative projects and collaborate with professionals who share my
+                        enthusiasm for technology.
+                    </p>
+                    <p>
+                        I am an adaptable and proactive person, always willing to face new challenges. I am particularly
+                        interested in innovation in software development and constantly seek opportunities to learn
+                        about new technologies and industry trends. I am motivated by the idea of creating efficient
+                        solutions that positively impact users and the community. My focus is to stay updated and be
+                        part of a dynamic environment that fosters creativity and professional development.
+                    </p>
+                </div>
+            </div>
+            <div class="row about-me__buttons">
+                <div class="column large-half tab-full">
+                    <a href="#" class="btn btn--stroke full-width">Hire Me</a>
+                </div>
+                <div class="column large-half tab-full">
+                    <a href="#" class="btn btn--primary full-width">Download CV</a>
+                </div>
+            </div>
+        </div> <!-- End about me -->
+
+        <div class="about-experience"> <!-- Start about-experience -->
+            <div class="row heading-block"> <!-- Header -->
+                <div class="column large-full"> <!-- Body -->
+                    <h2 class="section-heading">Work & Education</h2>
+                </div>
+            </div>
+
+            <div class="row about-experience__timeline"> <!-- Start row about experience -->
+                <div class="column large-half tab-full">
+                    <div class="timeline">
+                        <div class="timeline_icon-wrap">
+                            <span class="timeline_icon timeline_icon--work"></span>
+                        </div>
+                        <div class="timeline__block">
+                            <!-- Add content about work experience here -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div> <!-- End about experience -->
+
     </section>
 
 </body>
