--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS Styles -->
+    <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="estilos/estilos.css">
     <link rel="stylesheet" href="estilos/main.css">
     <link rel="stylesheet" href="estilos/vendor.css">
     <link rel="stylesheet" href="estilos/font-awesome/css/fontawesome-all.css">
 
-    <!-- JavaScript -->
+    <!-- JavaScript Files -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
 
-    <!-- Favicon -->
+    <!-- Favicon Links -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -23,12 +23,12 @@
 </head>
 
 <body id="top">
-    <!-- Preloader -->
+    <!-- Preloader Section -->
     <div id="preloader">
         <div id="loader"></div>
     </div>
 
-    <!-- Header -->
+    <!-- Header Section -->
     <header class="s-header">
         <div class="header-log">
             <a href="index.html" class="site-log"></a>
@@ -41,7 +41,7 @@
                 <li class="current"><a href="#intro" class="smoothscroll" title="intro">Introduction</a></li>
                 <li><a href="#about" title="about" class="smoothscroll">About</a></li>
                 <li><a href="#services" title="services" class="smoothscroll">Services</a></li>
-                <li><a href="#works" title="Works" class="smoothscroll">Works</a></li>
+                <li><a href="#works" title="works" class="smoothscroll">Works</a></li>
                 <li><a href="#contact" title="contact us" class="smoothscroll">Contact Us</a></li>
             </ul>
 
@@ -56,7 +56,7 @@
         <a href="#" class="header-menu-toggle"><span>Menu</span></a>
     </header> <!-- End of Header -->
 
-    <!-- Introduction -->
+    <!-- Introduction Section -->
     <section id="intro" class="s-intro target-section">
         <div class="row intro-content">
             <div class="column large-9 mob-full intro-text">
@@ -77,14 +77,14 @@
 
     <!-- About Section -->
     <section id="about" class="s-about target-section">
-        <div class="about-me"> <!-- Start about me -->
-            <div class="row heading-block"> <!-- Header -->
-                <div class="column large-full"> <!-- Body -->
+        <div class="about-me"> <!-- Start of About Me Section -->
+            <div class="row heading-block"> <!-- Section Header -->
+                <div class="column large-full"> <!-- Header Body -->
                     <h2 class="section-heading">About Me</h2>
                 </div>
             </div>
-            <div class="row about-me__content"> <!-- Content -->
-                <div class="column large-full about-me__text"> <!-- Text -->
+            <div class="row about-me__content"> <!-- Content Area -->
+                <div class="column large-full about-me__text"> <!-- Text Content -->
                     <p class="lead">
                         I am a developer in training with a focus on modern technologies and a solid foundation in
                         programming. Currently, I am pursuing studies that complement my skills, and I have obtained
@@ -106,7 +106,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row about-me__buttons">
+            <div class="row about-me__buttons"> <!-- Action Buttons -->
                 <div class="column large-half tab-full">
                     <a href="#" class="btn btn--stroke full-width">Hire Me</a>
                 </div>
@@ -114,32 +114,130 @@
                     <a href="#" class="btn btn--primary full-width">Download CV</a>
                 </div>
             </div>
-        </div> <!-- End about me -->
+        </div> <!-- End of About Me Section -->
 
-        <div class="about-experience"> <!-- Start about-experience -->
-            <div class="row heading-block"> <!-- Header -->
-                <div class="column large-full"> <!-- Body -->
+        <div class="about-experience"> <!-- Start of Work & Education Section -->
+            <div class="row heading-block"> <!-- Section Header -->
+                <div class="column large-full"> <!-- Header Body -->
                     <h2 class="section-heading">Work & Education</h2>
                 </div>
             </div>
 
-            <div class="row about-experience__timeline"> <!-- Start row about experience -->
-                <div class="column large-half tab-full">
-                    <div class="timeline">
+            <div class="row about-experience__timeline"> <!-- Timeline Container -->
+                <div class="column large-half tab-full"><!-- Left Column for Work Experience -->
+                    <div class="timeline"><!-- Timeline Block -->
                         <div class="timeline_icon-wrap">
                             <span class="timeline_icon timeline_icon--work"></span>
                         </div>
-                        <div class="timeline__block">
-                            <!-- Add content about work experience here -->
+                        <div class="timeline__block"><!-- Timeline Item -->
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">March 2024 - Present</p>
+                                <h3 class="item-title">Instituto Tecnológico Quito</h3>
+                                <h5>Student</h5>
+                            </div>
+                            <div class="timeline__desc"> <!-- Description Container -->
+                                <p>I am a student at the Instituto Tecnológico Quito focused on learning all the skills
+                                    that the teachers have for us and likewise continue learning more and not fall
+                                    behind but
+                                    improve as we learn.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="timeline__block"> <!-- Timeline Item -->
+                            <div class="timeline__bullet">
+                                <div class="timeline__header">
+                                    <p class="timeline__timeframe"> March 2024 - October 2024</p>
+                                    <h3 class="item-title">Information Systems Analysis</h3>
+                                    <h5>Instituti Tecnologico Quito</h5>
+                                </div>
+                                <div class="timeline__desc">
+                                    <p>This is a subject that is part of the study programs related to computing,
+                                        software engineering, and information management.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="timeline__block"> <!-- Timeline Item -->
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">March 2024 - August 2024</p>
+                                <h3 class="item-title">Programming Fundamentals</h3>
+                                <h5>Instituto Tecnologico Quito</h5>
+                            </div>
+                            <div class="timeline__desc"><!-- Description Container -->
+                                <p>This is essential for training professionals prepared to face current and future
+                                    technological challenges.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-        </div> <!-- End about experience -->
+                <div class="column large-half tab-full"> <!-- Right Column for Education -->
+                    <div class="timeline">
+                        <div class="timeline__icon-wrap">
+                            <span class="timeline__icon timeline_icon--education"></span>
+                        </div>
+                        <div class="timeline__block"> </div>
+                        <div class="timeline__bullet"><!-- Timeline Item -->
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">March 2024 - August 2024 </p>
+                                <h3 class="item-title">
+                                    Computer Architecture
+                                </h3>
+                                <h5>Instituto Tecnologico QUito</h5>
+                            </div>
+                            <div class="timeline__desc"><!-- Description Container -->
+                                <p>
+                                    Provides students with a comprehensive immersion into the core of digital machines,
+                                    exploring the internal structure of computers and providing essential skills for
+                                    hardware
+                                    maintenance and troubleshooting.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="timeline__block"> <!-- Timeline Item -->
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">March 2024 - August 2024 </p>
+                                <h3 class="item-title">Web Development 1</h3>
+                                <h5>Istituto Tecnologico Quito</h5>
+                            </div>
+                            <div class="timeline__desc"> <!-- Description Container -->
+                                <p>Introduces key technologies for creating web pages: HTML, CSS, and JavaScript.
+                                    Through this subject, students will learn to structure and design websites,
+                                    understanding how these tools integrate into web development.
+                                </p>
+                                <p>
+                                    Developing these skills in HTML, CSS, and JavaScript is relevant in the current job
+                                    context,
+                                    where digital presence is important. Understanding how these technologies complement
+                                    each other in user interface design and web application creation is essential for
+                                    any developer.
+                                </p>
+                            </div>
+                        </div>
 
-    </section>
+                        <div class="timeline__block"> <!-- Timeline Item -->
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">September 2024 - February 2025</p>
+                                <h3 class="item-title">Introduction to Operating Systems</h3>
+                                <h5>Instituto Tecnologico Quito</h5>
+                            </div>
+                            <div class="timeline__desc"> <!-- Description Container -->
+                                <p>This course will provide a general overview of operating systems,
+                                    including key definitions and the tools that will be used throughout the course.
+                                </p>
+                                <p>
+                                    Additionally, current trends and tensions in the field of operating systems will be
+                                    addressed,
+                                    highlighting the importance of their study both in career development and
+                                    professional enhancement.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-</body>
-
-</html>
+            </div> <!-- End of Row -->
